--- a/bracelet_frontend/src/index.css
+++ b/bracelet_frontend/src/index.css
@@ -1,4 +1,8 @@
 /*:root {*/
+/*    background-color: lightskyblue;*/
+/*}*/
+
+/*:root {*/
 /*  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;*/
 /*  line-height: 1.5;*/
 /*  font-weight: 400;*/
